# dr

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md
.github/workflows/: main.yaml
notebooks/: csv.ipynb
python/: group.py
queries/: weekly_sales_by_dept.sql
src/: commands.rs  handlers.rs  io.rs  main.rs  schema.rs  sql.rs
