[package]
name = "dr"
description = "Command-line data file processing in Rust"
version = "0.5.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license-file = "LICENSE"
repository = "https://git.guillemborrell.es/guillem/dr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["cargo"]}
polars-lazy = {"version" = "0.26"}
polars = {"version" = "0.26", features = ["sql", "lazy", "parquet", "decompress", "ipc", "ipc_streaming", "docs-selection"]}
