[package]
name = "dr"
description = "Command-line data file processing in Rust"
version = "0.5.3"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license-file = "LICENSE"
repository = "https://git.guillemborrell.es/guillem/dr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["cargo"]}
polars-lazy = {"version" = "0.26", "features" = ["parquet", "ipc", "csv-file"]}
polars-core = {"version" = "0.26", "features" = ["describe", "fmt"]}
polars-io = {"version" = "0.26", "features" = ["ipc_streaming"]}
polars-sql = {"version" = "0.2.2"}
